# leadscanr-utils

./: .gitignore  README.md  pyproject.toml  tasks.py
scripts/: release.sh
src/textutils/: __init__.py  bucket.py  cleanup.py  fold.py  mask.py
src/utils/: __init__.py  bucket.py  cleanup.py  fold.py  mask.py
tests/textutils/: cleanup.py  fold.py  mask.py
tests/utils/: cleanup.py  fold.py  mask.py
utils/: mask.py
