[project]
name = "leadscanr-utils"
version = "0.2.0"
description = "..."
readme = "README.md"
authors = [
    { name = "Ivan Kleshnin", email = "ivan@paqmind.com" }
]
requires-python = ">=3.11"
dependencies = [
    "demoji>=1.1.0",
]
[tool.uv.workspace]
members = ["exampole", "sample"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "toml>=0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/utils",
]
